# CMakeList.txt : CMake project for lc_sudoku_solver, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (lc_sudoku_solver "lc_sudoku_solver.cpp" "lc_sudoku_solver.h")

# TODO: Add tests and install targets if needed.
